DOP_clusterization_2019/traefik.rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-public
