DOP_clusterization_2019/poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: poll
  labels:
    app: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      name: poll
      labels:
        app: poll
    spec:
      containers:
        - name: poll
          image: epitechcontent/t-dop-600-poll:k8s
          resources:
            limits:
              memory: "128Mi"
          ports:
          - containerPort: 80
            name: poll
      restartPolicy: Always
