DOP_clusterization_2019/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      name: postgres
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
      containers:
      - name: postgres
        image: postgres:12
        ports:
          - containerPort: 5432
            name: postgres 
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
      restartPolicy: Always
