DOP_clusterization_2019/traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-ingress-controller
  namespace: kube-public
  labels:
    k8s-app: traefik-ingress-app
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: traefik-ingress-app
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-app
        name: traefik-ingress-app
    spec:
      restartPolicy: Always
      containers:
        - 
          image: traefik:v1.7
          name: traefik-ingress-app
          ports:
            - 
              name: http
              containerPort: 80
            - 
              name: admin
              containerPort: 8080
          args:
            - --api
            - --kubernetes
            - --logLevel=INFO
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60

---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-ingress-controller
  namespace: kube-public
  labels:
    k8s-app: traefik-ingress-app
spec:
  selector:
    matchLabels:
      k8s-app: traefik-ingress-app
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-app
        name: traefik-ingress-app
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.7
        name: traefik-ingress-app
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: admin
          containerPort: 8080
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
