DOP_clusterization_2019/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: worker
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      name: worker
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: epitechcontent/t-dop-600-worker:k8s
          resources:
            limits:
              memory: "256Mi"
      restartPolicy: Always
