DOP_clusterization_2019/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: poll
  selector:
    app: poll
