DOP_clusterization_2019/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: result
  selector:
    app: result
