DOP_clusterization_2019/traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: kube-public
spec:
  selector:
   k8s-app: traefik-ingress-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: web
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: admin
  type: NodePort
