DOP_clusterization_2019/poll.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: poll-ingress
spec:
  rules:
  - host:
    http:
      paths:
      - backend:
          serviceName: poll
          servicePort: 80
