DOP_clusterization_2019/result.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: result-ingress
spec:
  rules:
  - host:
    http:
      paths:
      - backend:
          serviceName: result
          servicePort: 80
